--- a/mr-sqigglar.html
+++ b/mr-sqigglar.html
@@ -12,6 +12,9 @@
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
+        <li role="presentation">
+          <a href="#" data-action="go-home">Home</a>
+        </li>
         {{#if game}}
         <li role="presentation" class="{{#if hostMode}}active{{/if}}">
           <a href="#" data-action="host-mode">Host</a>
@@ -20,9 +23,6 @@
           <a href="#" data-action="play-mode">Play</a>
         </li>
         {{/if}}
-        <li role="presentation">
-          <a href="#" class="btn btn-danger" data-action="new-game">New</a>
-        </li>
       </ul>
     </nav>
     <h3 class="text-muted">Mr. Squigglar</h3>
@@ -33,20 +33,40 @@
   {{#if playMode}}
     {{> sketchView}}
   {{/if}}
+  {{#unless modeSelected}}
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>Join Game</h2>
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-warning" data-action="new-game">
+            New Game
+          </a>
+          {{#each games}}
+          <a href="#" class="list-group-item" data-action="select-game">
+            {{name}}
+            <span class="badge">
+              {{momo started}}
+            </span>
+          </a>
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  {{/unless}}
 </template>
 
 <template name="hostView">
   <div class="row">
     <div class="col-sm-4">
       <h3>Squiggle</h3>
-      <img src="/squiggle_01.jpg" class="img-thumbnail">
+      <img src="{{imageUrl}}" class="img-thumbnail">
     </div>
     <div class="col-sm-8">
       <h3>Submitted</h3>
       <div class="row">
         {{#each submitted}}
         <div class="col-xs-6 col-md-3">
-          <div class="thumbnail" style="background-image: {{imageUrl}}; background-repeat: no-repeat; background-position: center, center; background-size: contain;">
+          <div class="thumbnail" style="background-image: {{backgroundUrl}}; background-repeat: no-repeat; background-position: center, center; background-size: contain;">
             <img src="{{emptyImage}}">
           </div>
         </div>
@@ -58,8 +78,20 @@
 
 <template name="sketchView">
   <h2>Sketching</h2>
-  <canvas class="sketch-canvas" width="600" height="800" style="background-image: {{imageUrl}}; background-repeat: no-repeat; background-position: center, center;">
-  </canvas>
-  <button data-action="send">Send</button>
-  <button data-action="clear">Clear</button>
+  <div class="row">
+    <div class="col-xs-6">
+      <button class="btn btn-block btn-lg btn-primary" data-action="send">Send</button>
+    </div>
+    <div class="col-xs-6">
+      <button class="btn btn-lg btn-warning pull-right" data-action="clear">Clear</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="thumbnail">
+        <canvas class="sketch-canvas" width="600" height="800" style="background-image: url({{imageUrl}}); background-repeat: no-repeat; background-position: center, center;">
+        </canvas>
+      </div>
+    </div>
+  </div>
 </template>
